fix bug on upsert entities
